--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -13,16 +13,7 @@
   }
 }
 
-@media (max-width: 520px) {
-  .session-card {
-    flex-direction: column;
-    align-items: flex-start;
-  }
-  .session-card__button {
-    width: 100%;
-    text-align: center;
-  }
-}
+/* Session Card responsive rules moved to src/styles/components/session-card.css */
 
 @media (max-width: 450px) {
   .phone {
